Add feature (#4)
* chore: update dep
* feat: add sql op
* feat: api add resource for image
* feat: add custome ui theme
* feat: add ui splitter pane lib
* feat: add directive tooltip
* refactor: remove primevue
* refactor: change less to sass
